--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -123,7 +124,29 @@
       </a>
       <div class="card-body">
         <div class="card-title">Casa Condomínio Buona Vita | Araraquara </div>
-        <div class="card-description">3 Suítes, Área Gourmet, Piscina, 4 Vagas investimento R$ 1.100.000</div>
+        <div class="card-description">Casa Condomínio Buona Vita | Araraquara 
+
+3 Suítes (Com Planejados)
+4 Banheiros 
+Escritório 
+Sala ampla e integrada (Com Ar Condicionado)
+Cozinha (com planejados)
+Área de serviço
+Área Gourmet 
+Piscina
+4 Vagas 
+Lazer Completo no Condomínio 
+
+Construido 229 m2
+Terreno 360 m2
+
+investimento R$ 1.100.000
+
+Agende a visita
+(16) 99789 2901
+
+Creci 263791F
+Araraquara SP</div>
         <a href="https://wa.me/5591999990001" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -135,7 +158,30 @@
       </a>
       <div class="card-body">
         <div class="card-title">Casa Condomínio Buona Vita | Araraquara </div>
-        <div class="card-description">3 Suítes, Área gourmet, Piscina, 4 Vagas investimento R$ 1.600.000</div>
+        <div class="card-description">3Casa Condomínio Buona Vita | Araraquara 
+
+3 Suítes (Com Planejados e Ar)
+5 Banheiros 
+Sala ampla e integrada
+Cozinha (com planejados)
+Área de serviço
+Área externa com Churrasqueira
+Piscina
+4 Vagas 
+Automação Residencial Completa 
+Sistema Fotovoltaico
+Lazer Completo no Condomínio 
+
+Construido 227 m2
+Terreno 360 m2
+
+investimento R$ 1.600.000
+
+Agende a visita
+(16) 99789 2901
+
+Creci 263791F
+Araraquara SP</div>
         <a href="https://wa.me/5591999990002" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -147,7 +193,27 @@
       </a>
       <div class="card-body">
         <div class="card-title">Casa Condomínio Buona Vita | Araraquara </div>
-        <div class="card-description">3 Suítes, Area gourmet, 2 Vagas investimento R$ 1.000.000</div>
+        <div class="card-description">Casa Condomínio Buona Vita | Araraquara 
+
+3 Suítes (Com Planejados)
+3 Banheiros + 1 Lavabo
+Sala ampla e integrada
+Cozinha (com planejados)
+Área de serviço
+Área externa com Churrasqueira
+2 Vagas 
+Lazer Completo no Condomínio 
+
+Construido 170 m2
+Terreno 360 m2
+
+investimento R$ 1.000.000
+
+Agende a visita
+(16) 99789 2901
+
+Creci 263791F
+Araraquara SP</div>
         <a href="https://wa.me/5591999990003" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -159,7 +225,30 @@
       </a>
       <div class="card-body">
         <div class="card-title">Sobrado no Condomínio Damha (ão) | Araraquara</div>
-        <div class="card-description">3 Dormitórios, Area Gourmet 4 Vagas Estacionamento investimento R$ 1.599.000</div>
+        <div class="card-description">Sobrado no Condomínio Damha (ão) | Araraquara
+
+3 Dormitórios (1 Suite com Closet e Planejados)
+Pé Direito Alto / Exclusivo
+Terraço Amplo 
+3 Banheiros
+1 Lavabo
+Home Office
+Salas amplas integradas
+Area Gourmet Churrasqueira e Forno de Pizza
+Aquecimento Solar
+4 Vagas Estacionamento
+Lazer completo no Condomínio
+
+Construido 298 m2
+Terreno 450 m2
+
+investimento R$ 1.599.000
+
+Agende a visita
+(16) 99789 2901
+
+Creci 263791F
+Araraquara SP</div>
         <a href="https://wa.me/5591999990004" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -171,7 +260,26 @@
       </a>
       <div class="card-body">
         <div class="card-title">Casa 3 Dormitórios Condomínio Veredas do Campo</div>
-        <div class="card-description">3 Dormitórios, Area Gourmet, 4 Vagas estacionamento investimento R$ 747.000</div>
+        <div class="card-description">Casa 3 Dormitórios Condomínio Veredas do Campo
+
+3 Dormitórios com planejados (1 Suite) 
+Sala Cozinha integrada
+Area Gourmet
+Banheiro e Lavabo
+Jardim de inverno
+4 Vagas Estacionamento
+Lazer Completo no Condomínio
+
+Construido 137 m2
+Terreno 260 m2
+
+investimento R$ 747.000
+
+Agende a visita
+(16) 99789 2901
+
+Creci 263791F
+Araraquara SP</div>
         <a href="https://wa.me/5591999990005" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -183,7 +291,27 @@
       </a>
       <div class="card-body">
         <div class="card-title">Casa no Condomínio Volpi | Araraquara</div>
-        <div class="card-description">3 Suítes, Área Gourmet, 4 Vagas investimento R$ 1.090.000</div>
+        <div class="card-description">Casa no Condomínio Volpi | Araraquara
+
+3 Suítes (Armários Planejados)
+3 Banheiros 
+Sala ampla e integrada (Armários Planejados)
+Cozinha (Armários Planejados)
+Área de serviço
+Área Gourmet 
+4 Vagas 
+Lazer Completo no Condomínio 
+
+Construido 171 m2
+Terreno 308 m2
+
+investimento R$ 1.090.000
+
+Agende a visita
+(16) 99789 2901
+
+Creci 263791F
+Araraquara SP</div>
         <a href="https://wa.me/5591999990006" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -194,8 +322,27 @@
         <img src="casa7.jpg" alt="Foto do imóvel 7" />
       </a>
       <div class="card-body">
-        <div class="card-title">Sobrado no Condomínio Volpi | Araraquara</div>
-        <div class="card-description">3 Suítes, Área Gourmet, 2 Vagas investimento R$ 1.350.000</div>
+        <div class="card-title">Sobrado no Condomínio Volpi | Araraquara
+
+3 Suítes (Armários Planejados)
+4 Banheiros 
+Sala ampla e integrada (Armários Planejados)
+Cozinha (Armários Planejados)
+Área de serviço
+Área Gourmet 
+2 Vagas 
+Lazer Completo no Condomínio 
+
+Construido 222 m2
+Terreno 270 m2
+
+investimento R$ 1.350.000
+
+Agende a visita
+(16) 99789 2901
+
+Creci 263791F
+Araraquara SP</div>
         <a href="https://wa.me/5591999990007" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -207,7 +354,27 @@
       </a>
       <div class="card-body">
         <div class="card-title">Casa no Condomínio Volpi | Araraquara</div>
-        <div class="card-description">2 Dormitórios, Piscina, 4 Vagas investimento R$ 850.000</div>
+        <div class="card-description">Casa no Condomínio Volpi | Araraquara
+
+Alto Padrão de Acabamento
+2 Dormitórios (Sendo 1 suíte)
+3 Banheiros 
+Sala ampla e integrada (Armários Planejados)
+Cozinha (Armários planejados)
+Piscina
+4 Vagas 
+Lazer Completo no Condomínio 
+
+Construido 156 m2
+Terreno 265 m2
+
+investimento R$ 850.000
+
+Agende a visita
+(16) 99789 2901
+
+Creci 263791F
+Araraquara SP</div>
         <a href="https://wa.me/5591999990008" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -220,7 +387,27 @@
       <div class="card-body">
         <div class="card-title">Casa no Condomínio Volpi | Araraquara
 </div>
-        <div class="card-description">3 Suítes, Piscina, Jardim Externo, 4 Vagas investimento R$ 1.290.000</div>
+        <div class="card-description">Casa no Condomínio Volpi | Araraquara
+
+3 Suítes (Armários Planejados)
+5 Banheiros 
+Sala ampla e integrada (Armários Planejados)
+Cozinha (Armários Planejados)
+Piscina
+Jardim Externo
+4 Vagas 
+Lazer Completo no Condomínio 
+
+Construido 185 m2
+Terreno 324 m2
+
+investimento R$ 1.290.000
+
+Agende a visita
+(16) 99789 2901
+
+Creci 263791F
+Araraquara SP</div>
         <a href="https://wa.me/5591999990009" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
