--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <header>
     <h1>Imóveis Araraquara | Compra Venda Aluga</h1>
     <p>
-      Encontre aqui o melhor negócio | 
+      Site de Anúncios | Encontre aqui o melhor negócio | 
       <a href="https://wa.me/5516997892901" target="_blank" rel="noopener noreferrer">
         Whats App para anunciar 16 99789-2901
       </a>
