--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -71,6 +70,7 @@
       font-size: 14px;
       color: #555;
       margin-bottom: 15px;
+      white-space: pre-line;
     }
 
     .whatsapp-btn {
@@ -109,7 +109,7 @@
   <header>
     <h1>Imóveis Araraquara | Compra Venda Aluga</h1>
     <p>
-      Site de Anúncios | Encontre aqui o melhor negócio | 
+      Encontre aqui o melhor negócio | 
       <a href="https://wa.me/5516997892901" target="_blank" rel="noopener noreferrer">
         Whats App para anunciar 16 99789-2901
       </a>
@@ -117,15 +117,44 @@
   </header>
 
   <div class="container">
+
     <!-- Imóvel 1 -->
+    <div class="card">
+      <a href="https://photos.app.goo.gl/MYnZkuMRg4Tu8a4K9" target="_blank" rel="noopener noreferrer">
+        <img src="casa10.jpeg" alt="Foto do imóvel 10" />
+      </a>
+      <div class="card-body">
+        <div class="card-title">Apartamento Alto Padrão | Vila Harmonia</div>
+        <div class="card-description">
+3 Suítes | 157 e 206 m2
+2 Varandas (Ventilação Cruzada)
+Piscina com Borda infinita
+SPA Privativo
+Academias
+2 e 3 Vagas | Box Privativo 
++ 30 itens de Lazer 
+
+Entrega em maio de 2026
+
+investimento total R$ 1.300.000
+
+Agende a visita
+(16) 99789 2901  
+
+Creci 263791-F 
+Araraquara SP</div>
+        <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
+      </div>
+    </div>
+
+    <!-- Imóvel 2 -->
     <div class="card">
       <a href="https://photos.app.goo.gl/7Z9R5st6g8P9qt3R8" target="_blank" rel="noopener noreferrer">
         <img src="casa1.jpg" alt="Foto do imóvel 1" />
       </a>
       <div class="card-body">
         <div class="card-title">Casa Condomínio Buona Vita | Araraquara </div>
-        <div class="card-description">Casa Condomínio Buona Vita | Araraquara 
-
+        <div class="card-description">
 3 Suítes (Com Planejados)
 4 Banheiros 
 Escritório 
@@ -151,15 +180,14 @@ Araraquara SP</div>
       </div>
     </div>
 
-    <!-- Imóvel 2 -->
+    <!-- Imóvel 3 -->
     <div class="card">
       <a href="https://photos.app.goo.gl/98mWub28BuPL2PbU9" target="_blank" rel="noopener noreferrer">
         <img src="casa2.jpg" alt="Foto do imóvel 2" />
       </a>
       <div class="card-body">
         <div class="card-title">Casa Condomínio Buona Vita | Araraquara </div>
-        <div class="card-description">3Casa Condomínio Buona Vita | Araraquara 
-
+        <div class="card-description">
 3 Suítes (Com Planejados e Ar)
 5 Banheiros 
 Sala ampla e integrada
@@ -186,15 +214,14 @@ Araraquara SP</div>
       </div>
     </div>
 
-    <!-- Imóvel 3 -->
+    <!-- Imóvel 4 -->
     <div class="card">
       <a href="https://photos.app.goo.gl/povKm5hLbnXv5f7j7" target="_blank" rel="noopener noreferrer">
         <img src="casa3.jpg" alt="Foto do imóvel 3" />
       </a>
       <div class="card-body">
         <div class="card-title">Casa Condomínio Buona Vita | Araraquara </div>
-        <div class="card-description">Casa Condomínio Buona Vita | Araraquara 
-
+        <div class="card-description">
 3 Suítes (Com Planejados)
 3 Banheiros + 1 Lavabo
 Sala ampla e integrada
@@ -218,15 +245,14 @@ Araraquara SP</div>
       </div>
     </div>
 
-    <!-- Imóvel 4 -->
+    <!-- Imóvel 5 -->
     <div class="card">
       <a href="https://photos.app.goo.gl/AD3x2PDPyanzzxYcA" target="_blank" rel="noopener noreferrer">
         <img src="casa4.jpg" alt="Foto do imóvel 4" />
       </a>
       <div class="card-body">
-        <div class="card-title">Sobrado no Condomínio Damha (ão) | Araraquara</div>
-        <div class="card-description">Sobrado no Condomínio Damha (ão) | Araraquara
-
+        <div class="card-title">Sobrado no Condomínio Damha | Araraquara</div>
+        <div class="card-description">
 3 Dormitórios (1 Suite com Closet e Planejados)
 Pé Direito Alto / Exclusivo
 Terraço Amplo 
@@ -253,15 +279,14 @@ Araraquara SP</div>
       </div>
     </div>
 
-    <!-- Imóvel 5 -->
+    <!-- Imóvel 6 -->
     <div class="card">
       <a href="https://photos.app.goo.gl/Nu3Kr6vpwZAxYNCg8" target="_blank" rel="noopener noreferrer">
         <img src="casa5.jpg" alt="Foto do imóvel 5" />
       </a>
       <div class="card-body">
         <div class="card-title">Casa 3 Dormitórios Condomínio Veredas do Campo</div>
-        <div class="card-description">Casa 3 Dormitórios Condomínio Veredas do Campo
-
+        <div class="card-description">
 3 Dormitórios com planejados (1 Suite) 
 Sala Cozinha integrada
 Area Gourmet
@@ -284,15 +309,14 @@ Araraquara SP</div>
       </div>
     </div>
 
-    <!-- Imóvel 6 -->
+    <!-- Imóvel 7 -->
     <div class="card">
       <a href="https://photos.app.goo.gl/PqzbbFoBDWQ8yxtu7" target="_blank" rel="noopener noreferrer">
         <img src="casa6.jpg" alt="Foto do imóvel 6" />
       </a>
       <div class="card-body">
         <div class="card-title">Casa no Condomínio Volpi | Araraquara</div>
-        <div class="card-description">Casa no Condomínio Volpi | Araraquara
-
+        <div class="card-description">
 3 Suítes (Armários Planejados)
 3 Banheiros 
 Sala ampla e integrada (Armários Planejados)
@@ -316,14 +340,14 @@ Araraquara SP</div>
       </div>
     </div>
 
-    <!-- Imóvel 7 -->
+    <!-- Imóvel 8 -->
     <div class="card">
       <a href="https://photos.app.goo.gl/hUAdERVccRhFgF9W8" target="_blank" rel="noopener noreferrer">
         <img src="casa7.jpg" alt="Foto do imóvel 7" />
       </a>
       <div class="card-body">
-        <div class="card-title">Sobrado no Condomínio Volpi | Araraquara
-
+        <div class="card-title">Sobrado no Condomínio Volpi | Araraquara</div>
+        <div class="card-description">
 3 Suítes (Armários Planejados)
 4 Banheiros 
 Sala ampla e integrada (Armários Planejados)
@@ -347,15 +371,14 @@ Araraquara SP</div>
       </div>
     </div>
 
-    <!-- Imóvel 8 -->
+    <!-- Imóvel 9 -->
     <div class="card">
       <a href="https://photos.app.goo.gl/YXKjxSLUCTzhPyZi6" target="_blank" rel="noopener noreferrer">
         <img src="casa8.jpg" alt="Foto do imóvel 8" />
       </a>
       <div class="card-body">
         <div class="card-title">Casa no Condomínio Volpi | Araraquara</div>
-        <div class="card-description">Casa no Condomínio Volpi | Araraquara
-
+        <div class="card-description">
 Alto Padrão de Acabamento
 2 Dormitórios (Sendo 1 suíte)
 3 Banheiros 
@@ -379,16 +402,14 @@ Araraquara SP</div>
       </div>
     </div>
 
-    <!-- Imóvel 9 -->
+    <!-- Imóvel 10 -->
     <div class="card">
       <a href="https://photos.app.goo.gl/2W26XHtp3zosgPm19" target="_blank" rel="noopener noreferrer">
         <img src="casa9.jpg" alt="Foto do imóvel 9" />
       </a>
       <div class="card-body">
-        <div class="card-title">Casa no Condomínio Volpi | Araraquara
-</div>
-        <div class="card-description">Casa no Condomínio Volpi | Araraquara
-
+        <div class="card-title">Casa no Condomínio Volpi | Araraquara</div>
+        <div class="card-description">
 3 Suítes (Armários Planejados)
 5 Banheiros 
 Sala ampla e integrada (Armários Planejados)
@@ -411,6 +432,7 @@ Araraquara SP</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
+
   </div>
 
   <footer>
