--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@
       <div class="card-body">
         <div class="card-title">Apartamento Alto Padrão | Vila Harmonia</div>
         <div class="card-description">
-3 Suítes | 157 e 206 m2
+3 Suítes 
+157 ou 206 m2
 2 Varandas (Ventilação Cruzada)
 Piscina com Borda infinita
 SPA Privativo
 Academias
-2 e 3 Vagas | Box Privativo 
-+ 30 itens de Lazer 
+2 e 3 Vagas + Box Privativo 
++ 30 itens de Lazer Premium
 
 Entrega em maio de 2026
 
-investimento total R$ 1.300.000
+investimento R$ 1.300.000
 
-Agende a visita
-(16) 99789 2901  
+Agende a visita - (16) 99789 2901  
 
 Creci 263791-F 
 Araraquara SP</div>
