--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
       <div class="card-body">
         <div class="card-title">Apartamento Alto Padrão | Vila Harmonia</div>
         <div class="card-description">
-3 Suítes 
 157 ou 206 m2
+3 ou 4 Suítes 
 2 Varandas (Ventilação Cruzada)
 Piscina com Borda infinita
 SPA Privativo
@@ -141,8 +141,8 @@ investimento R$ 1.300.000
 
 Agende a visita - (16) 99789 2901  
 
-Creci 263791-F 
-Araraquara SP</div>
+Araraquara SP | Creci 263791-F 
+</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -171,11 +171,9 @@ Terreno 360 m2
 
 investimento R$ 1.100.000
 
-Agende a visita
-(16) 99789 2901
+Agende a visita - (16) 99789 2901  
 
-Creci 263791F
-Araraquara SP</div>
+Araraquara SP | Creci 263791-F</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -205,11 +203,9 @@ Terreno 360 m2
 
 investimento R$ 1.600.000
 
-Agende a visita
-(16) 99789 2901
+Agende a visita - (16) 99789 2901  
 
-Creci 263791F
-Araraquara SP</div>
+Araraquara SP | Creci 263791-F</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -236,11 +232,9 @@ Terreno 360 m2
 
 investimento R$ 1.000.000
 
-Agende a visita
-(16) 99789 2901
+Agende a visita - (16) 99789 2901  
 
-Creci 263791F
-Araraquara SP</div>
+Araraquara SP | Creci 263791-F</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -270,11 +264,9 @@ Terreno 450 m2
 
 investimento R$ 1.599.000
 
-Agende a visita
-(16) 99789 2901
+Agende a visita - (16) 99789 2901  
 
-Creci 263791F
-Araraquara SP</div>
+Araraquara SP | Creci 263791-F</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -300,11 +292,9 @@ Terreno 260 m2
 
 investimento R$ 747.000
 
-Agende a visita
-(16) 99789 2901
+Agende a visita - (16) 99789 2901  
 
-Creci 263791F
-Araraquara SP</div>
+Araraquara SP | Creci 263791-F</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -331,11 +321,9 @@ Terreno 308 m2
 
 investimento R$ 1.090.000
 
-Agende a visita
-(16) 99789 2901
+Agende a visita - (16) 99789 2901  
 
-Creci 263791F
-Araraquara SP</div>
+Araraquara SP | Creci 263791-F</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -362,11 +350,9 @@ Terreno 270 m2
 
 investimento R$ 1.350.000
 
-Agende a visita
-(16) 99789 2901
+Agende a visita - (16) 99789 2901  
 
-Creci 263791F
-Araraquara SP</div>
+Araraquara SP | Creci 263791-F</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -393,11 +379,9 @@ Terreno 265 m2
 
 investimento R$ 850.000
 
-Agende a visita
-(16) 99789 2901
+Agende a visita - (16) 99789 2901  
 
-Creci 263791F
-Araraquara SP</div>
+Araraquara SP | Creci 263791-F</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
@@ -424,11 +408,9 @@ Terreno 324 m2
 
 investimento R$ 1.290.000
 
-Agende a visita
-(16) 99789 2901
+Agende a visita - (16) 99789 2901  
 
-Creci 263791F
-Araraquara SP</div>
+Araraquara SP | Creci 263791-F</div>
         <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
       </div>
     </div>
