--- a/index.html
+++ b/index.html
@@ -61,16 +61,17 @@
 
     .card-title {
       font-size: 18px;
-      font-weight: bold;
-      color: #333;
+      font-weight: 700 !important;
+      color: #000 !important;
       margin-bottom: 10px;
     }
 
     .card-description {
       font-size: 14px;
-      color: #555;
+      color: #000 !important;
       margin-bottom: 15px;
       white-space: pre-line;
+      font-weight: bold !important;
     }
 
     .whatsapp-btn {
@@ -419,8 +420,7 @@ Araraquara SP | Creci 263791-F</div>
 
   <footer>
     <p>
-      Atenção: Para sua segurança na compra, venda e locação, exija sempre um Corretor de Imóveis credenciado no CRECI.
-      Esta plataforma é apenas de anúncios e o conteúdo é de inteira responsabilidade dos anunciantes.
+      <strong>CRECI:</strong> 263791-F | <strong>Localização:</strong> Araraquara SP
     </p>
   </footer>
 </body>
