--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <header>
     <h1>Imóveis Araraquara | Compra Venda Aluga</h1>
     <p>
-      Encontre aqui o melhor negócio | 
+      Paulo Augusto Corretor de Imóveis CRECI: 263791-F | 
       <a href="https://wa.me/5516997892901" target="_blank" rel="noopener noreferrer">
         Whats App para anunciar 16 99789-2901
       </a>
@@ -420,7 +420,7 @@ Araraquara SP | Creci 263791-F</div>
 
   <footer>
     <p>
-      <strong>CRECI:</strong> 263791-F | <strong>Localização:</strong> Araraquara SP
+      <strong>Paulo Augusto Corretor de Imóveis CRECI:</strong> 263791-F | <strong>Whats App 16 99789 2901</strong> Araraquara SP
     </p>
   </footer>
 </body>
