--- a/index.html
+++ b/index.html
@@ -49,10 +49,23 @@
       transform: scale(1.02);
     }
 
-    .card img {
+    .card-img-container {
+      position: relative;
       width: 100%;
       height: 200px;
+      overflow: hidden;
+      cursor: pointer;
+    }
+
+    .card img {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
+      transition: transform 0.3s ease;
+    }
+
+    .card-img-container:hover img {
+      transform: scale(1.05);
     }
 
     .card-body {
@@ -104,13 +117,122 @@
       margin-right: auto;
       line-height: 1.5;
     }
+
+    /* Modal Gallery Styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.9);
+      overflow: auto;
+    }
+
+    .modal-content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      position: relative;
+      padding-top: 20px;
+    }
+
+    .modal-img {
+      max-width: 90%;
+      max-height: 80vh;
+      object-fit: contain;
+    }
+
+    .close-btn {
+      position: fixed;
+      top: 30px;
+      right: 30px;
+      color: #f1f1f1;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+      background: rgba(0,0,0,0.7);
+      padding: 10px 20px;
+      border-radius: 5px;
+      z-index: 1001;
+      border: 1px solid #fff;
+    }
+
+    .close-btn:hover {
+      background: rgba(0,0,0,0.9);
+    }
+
+    .prev {
+      cursor: pointer;
+      position: absolute;
+      left: 30px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: white;
+      font-weight: bold;
+      font-size: 30px;
+      transition: 0.3s;
+      user-select: none;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 16px;
+      border-radius: 3px;
+    }
+
+    .next {
+      cursor: pointer;
+      position: absolute;
+      right: 30px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: white;
+      font-weight: bold;
+      font-size: 30px;
+      transition: 0.3s;
+      user-select: none;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 16px;
+      border-radius: 3px;
+    }
+
+    .prev:hover, .next:hover {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    .thumbnail-container {
+      position: absolute;
+      bottom: 20px;
+      left: 0;
+      right: 0;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      padding: 10px;
+      overflow-x: auto;
+    }
+
+    .thumbnail {
+      width: 60px;
+      height: 60px;
+      object-fit: cover;
+      cursor: pointer;
+      opacity: 0.6;
+      transition: opacity 0.3s;
+    }
+
+    .thumbnail:hover, .thumbnail.active {
+      opacity: 1;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>Imóveis Araraquara | Compra Venda Aluga</h1>
     <p>
-      Paulo Augusto Corretor de Imóveis CRECI: 263791-F | 
+      Paulo Augusto Corretor de Imóveis CRECI:263791F | 
       <a href="https://wa.me/5516997892901" target="_blank" rel="noopener noreferrer">
         Whats App para anunciar 16 99789-2901
       </a>
@@ -121,9 +243,9 @@
 
     <!-- Imóvel 1 -->
     <div class="card">
-      <a href="https://photos.app.goo.gl/MYnZkuMRg4Tu8a4K9" target="_blank" rel="noopener noreferrer">
+      <div class="card-img-container" onclick="openModal('casa10.jpeg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
         <img src="casa10.jpeg" alt="Foto do imóvel 10" />
-      </a>
+      </div>
       <div class="card-body">
         <div class="card-title">Apartamento Alto Padrão | Vila Harmonia</div>
         <div class="card-description">
@@ -150,9 +272,9 @@ Araraquara SP | Creci 263791-F
 
     <!-- Imóvel 2 -->
     <div class="card">
-      <a href="https://photos.app.goo.gl/7Z9R5st6g8P9qt3R8" target="_blank" rel="noopener noreferrer">
+      <div class="card-img-container" onclick="openModal('casa1.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
         <img src="casa1.jpg" alt="Foto do imóvel 1" />
-      </a>
+      </div>
       <div class="card-body">
         <div class="card-title">Casa Condomínio Buona Vita | Araraquara </div>
         <div class="card-description">
@@ -181,9 +303,9 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 3 -->
     <div class="card">
-      <a href="https://photos.app.goo.gl/98mWub28BuPL2PbU9" target="_blank" rel="noopener noreferrer">
+      <div class="card-img-container" onclick="openModal('casa2.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
         <img src="casa2.jpg" alt="Foto do imóvel 2" />
-      </a>
+      </div>
       <div class="card-body">
         <div class="card-title">Casa Condomínio Buona Vita | Araraquara </div>
         <div class="card-description">
@@ -213,9 +335,9 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 4 -->
     <div class="card">
-      <a href="https://photos.app.goo.gl/povKm5hLbnXv5f7j7" target="_blank" rel="noopener noreferrer">
+      <div class="card-img-container" onclick="openModal('casa3.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
         <img src="casa3.jpg" alt="Foto do imóvel 3" />
-      </a>
+      </div>
       <div class="card-body">
         <div class="card-title">Casa Condomínio Buona Vita | Araraquara </div>
         <div class="card-description">
@@ -242,9 +364,9 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 5 -->
     <div class="card">
-      <a href="https://photos.app.goo.gl/AD3x2PDPyanzzxYcA" target="_blank" rel="noopener noreferrer">
+      <div class="card-img-container" onclick="openModal('casa4.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
         <img src="casa4.jpg" alt="Foto do imóvel 4" />
-      </a>
+      </div>
       <div class="card-body">
         <div class="card-title">Sobrado no Condomínio Damha | Araraquara</div>
         <div class="card-description">
@@ -274,9 +396,9 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 6 -->
     <div class="card">
-      <a href="https://photos.app.goo.gl/Nu3Kr6vpwZAxYNCg8" target="_blank" rel="noopener noreferrer">
+      <div class="card-img-container" onclick="openModal('casa5.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
         <img src="casa5.jpg" alt="Foto do imóvel 5" />
-      </a>
+      </div>
       <div class="card-body">
         <div class="card-title">Casa 3 Dormitórios Condomínio Veredas do Campo</div>
         <div class="card-description">
@@ -302,9 +424,9 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 7 -->
     <div class="card">
-      <a href="https://photos.app.goo.gl/PqzbbFoBDWQ8yxtu7" target="_blank" rel="noopener noreferrer">
+      <div class="card-img-container" onclick="openModal('casa6.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
         <img src="casa6.jpg" alt="Foto do imóvel 6" />
-      </a>
+      </div>
       <div class="card-body">
         <div class="card-title">Casa no Condomínio Volpi | Araraquara</div>
         <div class="card-description">
@@ -331,9 +453,9 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 8 -->
     <div class="card">
-      <a href="https://photos.app.goo.gl/hUAdERVccRhFgF9W8" target="_blank" rel="noopener noreferrer">
+      <div class="card-img-container" onclick="openModal('casa7.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
         <img src="casa7.jpg" alt="Foto do imóvel 7" />
-      </a>
+      </div>
       <div class="card-body">
         <div class="card-title">Sobrado no Condomínio Volpi | Araraquara</div>
         <div class="card-description">
@@ -360,9 +482,9 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 9 -->
     <div class="card">
-      <a href="https://photos.app.goo.gl/YXKjxSLUCTzhPyZi6" target="_blank" rel="noopener noreferrer">
+      <div class="card-img-container" onclick="openModal('casa8.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
         <img src="casa8.jpg" alt="Foto do imóvel 8" />
-      </a>
+      </div>
       <div class="card-body">
         <div class="card-title">Casa no Condomínio Volpi | Araraquara</div>
         <div class="card-description">
@@ -389,9 +511,9 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 10 -->
     <div class="card">
-      <a href="https://photos.app.goo.gl/2W26XHtp3zosgPm19" target="_blank" rel="noopener noreferrer">
+      <div class="card-img-container" onclick="openModal('casa9.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
         <img src="casa9.jpg" alt="Foto do imóvel 9" />
-      </a>
+      </div>
       <div class="card-body">
         <div class="card-title">Casa no Condomínio Volpi | Araraquara</div>
         <div class="card-description">
@@ -418,10 +540,92 @@ Araraquara SP | Creci 263791-F</div>
 
   </div>
 
+  <!-- Modal Gallery -->
+  <div id="galleryModal" class="modal">
+    <div class="modal-content">
+      <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+      <img id="modalImage" class="modal-img" src="" alt="Gallery Image">
+      <a class="next" onclick="changeSlide(1)">&#10095;</a>
+      <div class="thumbnail-container" id="thumbnailContainer"></div>
+    </div>
+    <span class="close-btn" onclick="closeModal()">Fechar</span>
+  </div>
+
   <footer>
     <p>
       <strong>Paulo Augusto Corretor de Imóveis CRECI:</strong> 263791-F | <strong>Whats App 16 99789 2901</strong> Araraquara SP
     </p>
   </footer>
+
+  <script>
+    let currentGallery = [];
+    let currentIndex = 0;
+    const modal = document.getElementById('galleryModal');
+    const modalImg = document.getElementById('modalImage');
+    const thumbnailContainer = document.getElementById('thumbnailContainer');
+
+    function openModal(mainImage, galleryImages) {
+      currentGallery = [mainImage, ...galleryImages];
+      currentIndex = 0;
+      updateModal();
+      modal.style.display = "block";
+      document.body.style.overflow = "hidden";
+    }
+
+    function closeModal() {
+      modal.style.display = "none";
+      document.body.style.overflow = "auto";
+    }
+
+    function changeSlide(n) {
+      currentIndex += n;
+      if (currentIndex >= currentGallery.length) {
+        currentIndex = 0;
+      } else if (currentIndex < 0) {
+        currentIndex = currentGallery.length - 1;
+      }
+      updateModal();
+    }
+
+    function goToSlide(index) {
+      currentIndex = index;
+      updateModal();
+    }
+
+    function updateModal() {
+      modalImg.src = currentGallery[currentIndex];
+      
+      // Update thumbnails
+      thumbnailContainer.innerHTML = '';
+      currentGallery.forEach((img, index) => {
+        const thumbnail = document.createElement('img');
+        thumbnail.src = img;
+        thumbnail.className = 'thumbnail' + (index === currentIndex ? ' active' : '');
+        thumbnail.onclick = () => goToSlide(index);
+        thumbnailContainer.appendChild(thumbnail);
+      });
+    }
+
+    // Close modal when clicking outside the image
+    modal.onclick = function(event) {
+      if (event.target === modal) {
+        closeModal();
+      }
+    };
+
+    // Keyboard navigation
+    document.onkeydown = function(e) {
+      if (modal.style.display === "block") {
+        e = e || window.event;
+        if (e.keyCode === 37) { // Left arrow
+          changeSlide(-1);
+        } else if (e.keyCode === 39) { // Right arrow
+          changeSlide(1);
+        } else if (e.keyCode === 27) { // Escape
+          closeModal();
+        }
+      }
+    };
+  </script>
 </body>
 </html>
