--- a/index.html
+++ b/index.html
@@ -271,39 +271,43 @@ Araraquara SP | Creci 263791-F
     </div>
 
     <!-- Imóvel 2 -->
-    <div class="card">
-      <div class="card-img-container" onclick="openModal('casa1.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
-        <img src="casa1.jpg" alt="Foto do imóvel 1" />
-      </div>
-      <div class="card-body">
-        <div class="card-title">Casa Condomínio Buona Vita | Araraquara </div>
-        <div class="card-description">
-3 Suítes (Com Planejados)
-4 Banheiros 
-Escritório 
-Sala ampla e integrada (Com Ar Condicionado)
-Cozinha (com planejados)
-Área de serviço
-Área Gourmet 
-Piscina
-4 Vagas 
-Lazer Completo no Condomínio 
+<div class="card">
+  <div class="card-img-container" onclick="openModal('casa1.jpg', [
+    'b1.jpg','b2.jpg','b3.jpg','b4.jpg','b5.jpg',
+    'b6.jpg','b7.jpg','b8.jpg','b9.jpg'
+  ])">
+    <img src="casa1.jpg" alt="Foto do imóvel 1" />
+  </div>
+  <div class="card-body">
+    <div class="card-title">Casa Condomínio Buona Vita | Araraquara</div>
+    <div class="card-description">
+      3 Suítes (Com Planejados)
+      4 Banheiros 
+      Escritório 
+      Sala ampla e integrada (Com Ar Condicionado)
+      Cozinha (com planejados)
+      Área de serviço
+      Área Gourmet 
+      Piscina
+      4 Vagas 
+      Lazer Completo no Condomínio 
 
-Construido 229 m2
-Terreno 360 m2
+      Construido 229 m2
+      Terreno 360 m2
 
-investimento R$ 1.100.000
+      investimento R$ 1.100.000
 
-Agende a visita - (16) 99789 2901  
+      Agende a visita - (16) 99789 2901  
 
-Araraquara SP | Creci 263791-F</div>
-        <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
-      </div>
+      Araraquara SP | Creci 263791-F
     </div>
+    <a href="https://wa.me/5516997892901" class="whatsapp-btn" target="_blank">WhatsApp</a>
+  </div>
+</div>
 
     <!-- Imóvel 3 -->
     <div class="card">
-      <div class="card-img-container" onclick="openModal('casa2.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
+      <div class="card-img-container" onclick="openModal('casa2.jpg', ['c1.jpg','c2.jpg','c3.jpg','c4.jpg','c5.jpg','c6.jpg','c7.jpg','c8.jpg','c9.jpg'])">
         <img src="casa2.jpg" alt="Foto do imóvel 2" />
       </div>
       <div class="card-body">
@@ -335,7 +339,7 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 4 -->
     <div class="card">
-      <div class="card-img-container" onclick="openModal('casa3.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
+      <div class="card-img-container" onclick="openModal('casa3.jpg', ['d1.jpg','d2.jpg','d3.jpg','d4.jpg','d5.jpg','d6.jpg','d7.jpg','d8.jpg','d9.jpg'])">
         <img src="casa3.jpg" alt="Foto do imóvel 3" />
       </div>
       <div class="card-body">
@@ -364,7 +368,7 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 5 -->
     <div class="card">
-      <div class="card-img-container" onclick="openModal('casa4.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
+      <div class="card-img-container" onclick="openModal('casa4.jpg', ['e1.jpg','e2.jpg','e3.jpg','e4.jpg','e5.jpg','e6.jpg','e7.jpg','e8.jpg','e9.jpg'])">
         <img src="casa4.jpg" alt="Foto do imóvel 4" />
       </div>
       <div class="card-body">
@@ -396,7 +400,7 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 6 -->
     <div class="card">
-      <div class="card-img-container" onclick="openModal('casa5.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
+      <div class="card-img-container" onclick="openModal('casa5.jpg', ['f1.jpg','f2.jpg','f3.jpg','f4.jpg','f5.jpg','f6.jpg','f7.jpg','f8.jpg','f9.jpg'])">
         <img src="casa5.jpg" alt="Foto do imóvel 5" />
       </div>
       <div class="card-body">
@@ -424,7 +428,7 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 7 -->
     <div class="card">
-      <div class="card-img-container" onclick="openModal('casa6.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
+      <div class="card-img-container" onclick="openModal('casa6.jpg', ['g1.jpg','g2.jpg','g3.jpg','g4.jpg','g5.jpg','g6.jpg','g7.jpg','g8.jpg','g9.jpg'])">
         <img src="casa6.jpg" alt="Foto do imóvel 6" />
       </div>
       <div class="card-body">
@@ -453,7 +457,7 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 8 -->
     <div class="card">
-      <div class="card-img-container" onclick="openModal('casa7.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
+      <div class="card-img-container" onclick="openModal('casa7.jpg', ['h1.jpg','h2.jpg','h3.jpg','h4.jpg','h5.jpg','h6.jpg','h7.jpg','h8.jpg','h9.jpg'])">
         <img src="casa7.jpg" alt="Foto do imóvel 7" />
       </div>
       <div class="card-body">
@@ -482,7 +486,7 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 9 -->
     <div class="card">
-      <div class="card-img-container" onclick="openModal('casa8.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
+      <div class="card-img-container" onclick="openModal('casa8.jpg', ['i1.jpg','i2.jpg','i3.jpg','i4.jpg','i5.jpg','i6.jpg','i7.jpg','i8.jpg','i9.jpg'])">
         <img src="casa8.jpg" alt="Foto do imóvel 8" />
       </div>
       <div class="card-body">
@@ -511,7 +515,7 @@ Araraquara SP | Creci 263791-F</div>
 
     <!-- Imóvel 10 -->
     <div class="card">
-      <div class="card-img-container" onclick="openModal('casa9.jpg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg'])">
+      <div class="card-img-container" onclick="openModal('casa9.jpg', ['j1.jpg','j2.jpg','j3.jpg','j4.jpg','j5.jpg','j6.jpg','j7.jpg','j8.jpg','j9.jpg'])">
         <img src="casa9.jpg" alt="Foto do imóvel 9" />
       </div>
       <div class="card-body">
