--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
     <!-- Imóvel 1 -->
     <div class="card">
-      <div class="card-img-container" onclick="openModal('casa10.jpeg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg','s10.jpg','s11.jpg','s12.jpg','s13.jpg','s14.jpg','s15.jpg','s16.jpg','s17.jpg','s18.jpg','s19.jpg','s20.jpg','s21.jpg','s22.jpeg','s23.jpeg','s24.jpeg','s25.jpeg','s26.jpeg'])">
+      <div class="card-img-container" onclick="openModal('casa10.jpeg', ['s1.jpeg','s2.jpeg','s3.jpeg','s4.jpeg','s5.jpeg','s6.jpeg','s7.jpeg','s8.jpeg','s9.jpeg','s10.jpg','s11.jpg','s12.jpg','s13.jpg','s14.jpg','s15.jpg','s16.jpg','s17.jpg','s18.jpg','s19.jpg','s20.jpg','s21.jpg',])">
         <img src="casa10.jpeg" alt="Foto do imóvel 10" />
       </div>
       <div class="card-body">
